# medical-rag-rl

./: .env.example  .gitignore  DATASET.md  README.md  REPRODUCE.md  pyproject.toml
artifacts/data_stats/: prepare_pubmed_stats.json  sft_data_stats.json
artifacts/release/: biz_guardrail.json  biz_guardrail.md  biz_quality_gate_harden_v3.json  biz_quality_gate_harden_v3.md  biz_quality_gate_pre_harden.json  biz_quality_gate_pre_harden.md  biz_real_guardrail.json  biz_real_guardrail.md  biz_real_guardrail_harden_v2.json  biz_real_guardrail_harden_v2.md  biz_real_guardrail_harden_v3.json  biz_real_guardrail_harden_v3.md  biz_real_guardrail_pre_harden.json  biz_real_guardrail_pre_harden.md  biz_real_guardrail_pre_harden_v2.json  biz_real_guardrail_pre_harden_v2.md  engineering_qc_upgrade_2026-02-28.md  final_guardrail_audit.json  final_guardrail_audit.md  final_guardrail_audit_v3_all.json  final_guardrail_audit_v3_all.md  final_guardrail_audit_v4_all.json  final_guardrail_audit_v4_all.md  (+22 more)
configs/: data.yaml  dpo.yaml  eval.yaml  rag.yaml  rlvr.yaml  sft.yaml  system.yaml
scripts/: bootstrap_dirs.sh  build_index.py  build_preference_data.py  build_sft_data.py  check_env.py  download_models.py  guardrail_audit.py  prepare_pubmed.py  release_quality_gate.py  reproduce_full.sh  reproduce_smoke.sh  run_eval.py  run_rag_baseline.py  run_release_checks.sh  train_dpo.py  train_rlvr.py  train_sft.py  verify_data.py
src/common/: config.py  (+3 more)
tests/: test_data_pipeline.py  test_generator_cleanup.py  test_quality_gate.py  test_rag_pipeline.py  test_retrieval.py  test_rewards.py
(+37 files in other folders)
